# coverdrive

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .sqlfluff  Dockerfile  LICENSE  Makefile  README.md  SCREENSHOT_CHECKLIST.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: daily_refresh.py
conf/: pipeline.yaml
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: compute_pca.sql
dbt/models/: schema.yml  sources.yml
dbt/models/marts/: dim_player.sql  fact_career_stats.sql  mart_top_batsmen.sql  mart_top_bowlers.sql
dbt/models/staging/: stg_batting.sql  stg_bowling.sql
docs/: ARCHITECTURE.md  adr-pca-leakage.md
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: take_screenshots.py  take_service_screenshots.py
src/coverdrive/: api.py  ingestion.py  quality.py  transform.py  utils.py
tests/: conftest.py  test_ingestion.py  test_quality.py  test_transform.py
tests/fixtures/: batting_sample.csv  bowling_sample.csv
