[project]
name = "coverdrive"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0,<6.0",
    "pandas>=2.2",
    "pyarrow>=16.1",
    "boto3>=1.34",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "structlog>=24.1",
    "tenacity>=8.2",
    "pandera[pandas]>=0.18",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "duckdb>=0.10",
    "prometheus-client>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
